# training

./: .gitignore
.trunk/: trunk.yaml
bash/: script.sh  test_cronjob
bash/amount_of_lines_of_code/: command
bash/amount_of_passed_arguments/: amount_of_passed_arguments.sh
bash/check_status_of_service/: a.sh  b.sh
bash/commenting_certain_line/: 1  2  3  sc
bash/commenting_certain_line/dir/: 4
bash/executive_function/: executive_function.sh
bash/get_flag/: script.sh
bash/gscripts/: alia  coma  comt  gitcr  gscr  idea  lscr  mkcd  mkrec  nc  recf  sy  tolrn  up
bash/gscripts/addToGitignore/: ai
bash/gscripts/addToPath/: ap  ch
bash/gscripts/budget/: bdg
bash/gscripts/checkConnection/: chk  chk2  chk3  chk4
bash/gscripts/chksc/: jm  ojm  ojm2
bash/gscripts/jump/: err  jm
bash/gscripts/lifeQuestions/: lq
bash/gscripts/mkplan/: mkp
bash/gscripts/myBuild/: mk
bash/gscripts/note/: nt
bash/gscripts/old/: bckp  bckpo
bash/gscripts/removeLastWallpaper/: rl
bash/gscripts/scripts/: bd  galias  help.sh  if.sh  length  parse.sh
bash/gscripts/switchWallpaper/: wallp
bash/jq/: a.sh
bash/my_grep/: process_two_tuples.sh
bash/name_of_command_in_string/: name_of_command_in_string.sh
bash/passing_arguments_to_function/: a.sh
bash/ps1_swap/: ps1_swap.sh
bash/set/: e.sh
cmake/branching/: CMakeLists.txt
cmake/cycles/: CMakeLists.txt
cmake/find_package/: CMakeLists.txt
cmake/helloworld_1/: CMakeLists.txt
cmake/helloworld_2/: main.cpp  mylib.cpp
cmake/include_directories/: CMakeLists.txt  main.cpp
cmake/include_directories/mylib/: mylib.cpp
cmake/list_of_vars/: CMakeLists.txt
cmake/makefile/: a.cpp  function.cpp  function.h  mkfile
cmake/options/: CMakeLists.txt
cmake/output_of_vars/: CMakeLists.txt
cmake/print_all_variables/: CMakeLists.txt
cmake/return/: CMakeLists.txt
cmake/set_unset/: CMakeLists.txt
cmake/subprojects/: CMakeLists.txt  main.cpp
cmake/subprojects/sublib/: CMakeLists.txt  sublib.cpp  sublib.hpp
cpp/_/watch/: a.c  chwatch.c  chwatch.h  inner.c  inner.h  rec_sh.c  rec_sh.h
cpp/algorithms/adjacent_find/: main.cpp
cpp/algorithms/algoritm_end_iterator/: main.cpp
cpp/algorithms/copy_elements_from_vector_to_another/: main.cpp
cpp/algorithms/cycle_shift/: a.cpp
cpp/algorithms/factorial/: a.c  factorial.c
cpp/algorithms/find/: main.cpp
cpp/algorithms/modern_for/: main.cpp
cpp/algorithms/months_which_start_with_the_same_letter/: main.cpp
cpp/algorithms/npos/: main.cpp
cpp/algorithms/rpl_dot_with_comma/: main.cpp
cpp/algorithms/sortf/: a.cpp
cpp/algorithms/std_copy/: main.cpp
cpp/algorithms/std_copy_with_pointers/: main.cpp
cpp/base_types/char_literal/: main.cpp
cpp/base_types/double_without_fraction_part/: main.cpp
cpp/base_types/e_notation/: main.cpp
cpp/json/mind_map/: CMakeLists.txt  main.cpp
cpp/json/mind_map/include/: json_manipulator.hpp  shortenings.hpp  themes.hpp
cpp/json/mind_map/src/: json_manipulator.cpp  themes.cpp
cpp/json/rapidjson/json_start/src/: CMakeLists.txt  json_start.h
cpp/linking/: a.cpp  b.cpp
cpp/map_with_comparator/: a.cpp  default.nix  g++  result
cpp/net/http/server_poco_helloworld/: CMakeLists.txt
cpp/net/http/server_poco_helloworld/sources/: server.cpp  server.hpp
cpp/net/tcpip/client_server/: CMakeLists.txt  end_point.cpp  end_point.hpp  main.cpp  server.cpp  server.hpp
cpp/net/tcpip/socket_class/: CMakeLists.txt  socket_class.cpp  socket_class.h
cpp/net/udp/poco/send_message/: CMakeLists.txt  main.cpp
cpp/pattern/factory/: CMakeLists.txt  main.cpp
cpp/pattern/factory/sources/: client_code.cpp  client_code.hpp  creator.cpp  creator.hpp  products.cpp  products.hpp
cpp/result_of_logical_operator_with_changing_values_during_execution/: a.cpp
cpp/sd_notify/: a.sh  b.sh
cpp/signal/Emiter_of_signal/: CMakeLists.txt  main.cpp
cpp/signed/: a.cpp
cpp/sqlite/: mydb
cpp/testing/catch_2/test_async/: CMakeLists.txt  main.cpp  std_async.cpp
cpp/thread/test_promise/: CMakeLists.txt  main.cpp
docker/example_python_from_docker_doc/: Dockerfile  app.py  db.py  docker-compose.yml  my_app.py  my_app_2.py  prepare_database.sql  requirements.txt
docker/install_utilites_and_run_in_docker/: Dockerfile
docker/my_docker_image_with_mysql_server/: Dockerfile  script.sql
docker/second_db/: Dockerfile  create-table.sql
javascript/function_with_arrow/: a.js
javascript/hello_world/: index.html
nix/first_project/: flake.nix
nix/read_shell_script/: default.nix  flake.nix  hello.sh  nix-command.sh
nix/test/: a.nix  default.nix  result
python/_/: a.py  aa.py  b.py  c.py  main.py
python/convert_to_upper_case/: a.py  ifas.txt  ifas.txt_
python/dataclass/: a.py
python/debugging/: script1.py  script2.py
python/functions/: docstring.py
python/generate_ifas/: a.py
python/json/: a.py  rtb_banner.json
python/lessons/: pytest.ini
python/threads/: main.py
typescript/: a.ts  load_js.html
(+652 files in other folders)
